--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -45,8 +45,8 @@
         - name: Upload artifact
           uses: actions/upload-pages-artifact@v3
           with:
-            # Upload dist repository
-            path: './dist'
+            # Upload build repository
+            path: './build'
         - name: Deploy to GitHub Pages
           id: deployment
           uses: actions/deploy-pages@v4
